the app is now working, as long as you use the flag --liveReload=false

--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,1 +1,3 @@
-<taco-nx-welcome></taco-nx-welcome> <router-outlet></router-outlet>
+<taco-nx-welcome></taco-nx-welcome>
+<p>Not the welcome</p>
+<router-outlet></router-outlet>
