--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,3 +1,3 @@
-<a [routerLink]="['/builder']">Builder</a>
+<a [routerLink]="['/builder']">Builder</a> | <a [routerLink]="['/random']">Random</a>
 <br>
 <router-outlet></router-outlet>
